--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="clean_history">清除搜索历史</string>
     <string name="please_input_search_info">请输入搜索内容</string>
     <string name="no_search_history">暂无搜索历史</string>
+    <string name="coin_bbs">币吧</string>
+    <string name="mind">我的</string>
+    <string name="market">行情</string>
+    <string name="firstpage">首页</string>
+    <string name="focus_on_done">已关注</string>
 </resources>
