新增币吧详情

--- a/cdcommon/src/main/res/values/strings.xml
+++ b/cdcommon/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
     <string name="please_input_new_phone">请输入新手机号</string>
     <string name="register">注册</string>
     <string name="register_succ">注册成功</string>
+
+    <string name="click_open">点击展开</string>
+    <string name="click_close">点击收起</string>
 </resources>
