--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@
     <string name="market">行情</string>
     <string name="firstpage">首页</string>
     <string name="focus_on_done">已关注</string>
+    <string name="all">全部</string>
+    <string name="hot">热门</string>
+    <string name="focus_on">关注</string>
+    <string name="hot_message">热点</string>
+
 </resources>
