--- a/cdcommon/src/main/res/values/strings.xml
+++ b/cdcommon/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
 
     <string name="click_open">点击展开</string>
     <string name="click_close">点击收起</string>
+    <string name="tips">提示</string>
+    <string name="cancel">取消</string>
 </resources>
