--- a/cdcommon/src/main/res/values/strings.xml
+++ b/cdcommon/src/main/res/values/strings.xml
@@ -53,4 +53,23 @@
     <string name="click_close">点击收起</string>
     <string name="tips">提示</string>
     <string name="cancel">取消</string>
+
+
+    <string name="prompt">提示</string>
+    <string name="sure_">确定</string>
+    <string name="content">内容</string>
+    <string name="net_error">网络加载异常</string>
+    <string name="net_service_time_out">服务器响应超时</string>
+    <string name="net_req_time_out">网络请求超时</string>
+    <string name="net_exception">网络异常</string>
+    <string name="error_unknown">未知错误</string>
+    <string name="net_data_is_null">数据获取为空</string>
+    <string name="no_net">暂无网络</string>
+    <string name="net_req_fail">网络请求失败</string>
+    <string name="upload_pic_fail">图片上传失败</string>
+    <string name="qiniu_token_error">token失败</string>
+    <string name="no_camera">没有可用相机</string>
+    <string name="no_sd_card">SD卡不存在</string>
+    <string name="get_pic_fail">图片获取失败</string>
+
 </resources>
