--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="update_logo_succ">头像更换成功</string>
     <string name="please_input_nick_name">请输入昵称</string>
     <string name="update_nick_name_succ">昵称修改成功</string>
+    <string name="no_fast_msg">暂无快讯</string>
 
 </resources>
