--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,5 +92,6 @@
     <string name="bbs_circular">圈子</string>
     <string name="bbs_today_num">今日跟贴:</string>
     <string name="please_input_info">请输入内容:</string>
+    <string name="lod_note">原文</string>
 
 </resources>
