--- a/cdcommon/src/main/res/values/strings.xml
+++ b/cdcommon/src/main/res/values/strings.xml
@@ -71,5 +71,8 @@
     <string name="no_camera">没有可用相机</string>
     <string name="no_sd_card">SD卡不存在</string>
     <string name="get_pic_fail">图片获取失败</string>
+    <string name="release_succ">发布成功</string>
+    <string name="release_succ_1">发布成功, 您的评价包含敏感字符,我们将进行审核</string>
+    <string name="realse_fail">发布失败</string>
 
 </resources>
