--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@
     <string name="bbs_today_num">今日跟贴:</string>
     <string name="please_input_info">请输入内容:</string>
     <string name="lod_note">原文</string>
+    <string name="no_comment">暂无评论</string>
 
 </resources>
