--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="bbs_circular">圈子</string>
     <string name="bbs_today_num">今日跟贴:</string>
     <string name="please_input_info">请输入内容:</string>
-    <string name="lod_note">原文</string>
+    <string name="old_note">原文</string>
     <string name="no_comment">暂无评论</string>
     <string name="about_us">关于我们</string>
 
