--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="collect_succ">收藏成功</string>
     <string name="collect_cancel_succ">取消收藏成功</string>
     <string name="commen_details">评论详情</string>
+    <string name="no_user_info">暂无用户信息</string>
 
 </resources>
