--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,8 @@
     <string name="commen_details">评论详情</string>
     <string name="no_user_info">暂无用户信息</string>
     <string name="user_center">个人中心</string>
+    <string name="update_tip">更新提示</string>
+    <string name="update_now">立即更新</string>
+    <string name="no_hot_coin">暂无热门币种</string>
 
 </resources>
