--- a/cdcommon/src/main/res/values/strings.xml
+++ b/cdcommon/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="click_close">点击收起</string>
     <string name="tips">提示</string>
     <string name="cancel">取消</string>
+    <string name="check">查看</string>
 
 
     <string name="prompt">提示</string>
