--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,9 @@
     <string name="activity_nick_name">昵称</string>
     <string name="plate_hot">热门板块</string>
     <string name="plate_all">全部板块</string>
+    <string name="introduce">介绍</string>
+    <string name="up_coin">上涨币种</string>
+    <string name="down_coin">下跌币种</string>
+    <string name="total_coin_">币种数量</string>
 
 </resources>
