--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,17 +65,17 @@
     <string name="update_nick_name_succ">昵称修改成功</string>
     <string name="no_fast_msg">暂无快讯</string>
     <string name="no_msg">暂无资讯</string>
-    <string name="no_article">暂无文章</string>
-    <string name="no_collection">暂无收藏</string>
+    <string name="no_article">暂时没有文章</string>
+    <string name="no_collection">暂时没有收藏</string>
     <string name="no_my_active">暂无参与的活动</string>
     <string name="no_coin_info">暂无币种信息</string>
-    <string name="no_search_info">暂无搜索内容</string>
+    <string name="no_search_info">没有搜索到你想要的内容</string>
     <string name="no_platform_info">暂无平台信息</string>
     <string name="no_coin_bbs">暂无币吧</string>
-    <string name="no_active">暂无活动</string>
+    <string name="no_active">暂时没有活动</string>
     <string name="no_approve_user">暂无报名用户</string>
-    <string name="no_add_market">暂无行情</string>
-    <string name="no_bbs_circular">暂无圈子信息</string>
+    <string name="no_add_market">暂时没有行情</string>
+    <string name="no_bbs_circular">暂时没有圈子信息</string>
     <string name="author">作者:</string>
     <string name="message_frome">来源:</string>
     <string name="show_your_idea">说出你的看法</string>
