--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="search_history">搜索历史</string>
     <string name="clean_history">清除搜索历史</string>
     <string name="please_input_search_info">请输入搜索内容</string>
-    <string name="no_search_history">暂无搜索历史</string>
+    <string name="no_search_history">暂时没有搜索历史</string>
     <string name="coin_bbs">币吧</string>
     <string name="active">活动</string>
     <string name="mind">我的</string>
@@ -63,17 +63,17 @@
     <string name="update_logo_succ">头像更换成功</string>
     <string name="please_input_nick_name">请输入昵称</string>
     <string name="update_nick_name_succ">昵称修改成功</string>
-    <string name="no_fast_msg">暂无快讯</string>
-    <string name="no_msg">暂无资讯</string>
+    <string name="no_fast_msg">暂时没有快讯</string>
+    <string name="no_msg">暂时没有资讯</string>
     <string name="no_article">暂时没有文章</string>
     <string name="no_collection">暂时没有收藏</string>
-    <string name="no_my_active">暂无参与的活动</string>
-    <string name="no_coin_info">暂无币种信息</string>
+    <string name="no_my_active">暂时没有参与的活动</string>
+    <string name="no_coin_info">暂时没有币种信息</string>
     <string name="no_search_info">没有搜索到你想要的内容</string>
-    <string name="no_platform_info">暂无平台信息</string>
-    <string name="no_coin_bbs">暂无币吧</string>
+    <string name="no_platform_info">暂时没有平台信息</string>
+    <string name="no_coin_bbs">暂时没有币吧</string>
     <string name="no_active">暂时没有活动</string>
-    <string name="no_approve_user">暂无报名用户</string>
+    <string name="no_approve_user">暂时没有报名用户</string>
     <string name="no_add_market">暂时没有行情</string>
     <string name="no_bbs_circular">暂时没有圈子信息</string>
     <string name="author">作者:</string>
@@ -110,11 +110,11 @@
     <string name="collect_succ">收藏成功</string>
     <string name="collect_cancel_succ">取消收藏成功</string>
     <string name="commen_details">评论详情</string>
-    <string name="no_user_info">暂无用户信息</string>
+    <string name="no_user_info">暂时没有用户信息</string>
     <string name="user_center">个人中心</string>
     <string name="update_tip">更新提示</string>
     <string name="update_now">立即更新</string>
-    <string name="no_hot_coin">暂无热门币种</string>
+    <string name="no_hot_coin">暂时没有热门币种</string>
     <string name="share_succ">分享成功</string>
     <string name="share_fail">分享失败</string>
     <string name="share_cancel">取消分享</string>
