--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,8 +124,8 @@
     <string name="into_bbs_title">现在有%1$s个帖子在讨论，你也一起来吧!</string>
 
     <string name="activity_nick_name">昵称</string>
-    <string name="plate_hot">热门板块</string>
-    <string name="plate_all">全部板块</string>
+    <string name="plate_hot">热门版块</string>
+    <string name="plate_all">全部版块</string>
     <string name="introduce">介绍</string>
     <string name="up_coin">上涨币种</string>
     <string name="down_coin">下跌币种</string>
